fixed spacing of footer

--- a/index.css
+++ b/index.css
@@ -88,6 +88,10 @@ a:hover {
   width: 80%;
 }
 
+.margint {
+  margin-top:155px
+}
+
 #change_pyr-el {
   background-color: plum;
   color: #3c3327;
